// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GDCTrack widget > renders gene extra panel 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1808mag-MuiPaper-root-MuiAccordion-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <h3
    class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
  >
    <button
      aria-expanded="true"
      class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters css-5l1z4b-MuiButtonBase-root-MuiAccordionSummary-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-ja37vy-MuiAccordionSummary-content"
      >
        <span
          class="MuiTypography-root MuiTypography-button css-l5w3u1-MuiTypography-root"
        >
          External Links
        </span>
      </span>
      <span
        class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ctmwhn-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </span>
    </button>
  </h3>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
      >
        <div
          class="MuiAccordion-region css-at4ued-MuiAccordion-region"
          role="region"
        >
          <div
            class="MuiAccordionDetails-root css-1mmb7mj-MuiAccordionDetails-root"
          >
            <div
              style="width: 100%; max-height: 600px; overflow: auto;"
            >
              <table
                class="MuiTable-root css-1anakm7-MuiTable-root-table"
              >
                <tbody
                  class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root css-1w1gqi5-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      GDC
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gb9nks-MuiTypography-root-MuiLink-root-link"
                        href="https://portal.gdc.cancer.gov/genes/ENSG00000134121"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSG00000134121
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root css-1w1gqi5-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      ENSEMBL
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gb9nks-MuiTypography-root-MuiLink-root-link"
                        href="http://www.ensembl.org/id/ENSG00000134121"
                        rel="noopener"
                        target="_blank"
                      >
                        ENSG00000134121
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root css-1w1gqi5-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      Canonical Transcript ID
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gb9nks-MuiTypography-root-MuiLink-root-link"
                        href="http://www.ensembl.org/id/ENST00000256509"
                        rel="noopener"
                        target="_blank"
                      >
                        ENST00000256509
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root css-1w1gqi5-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      HGNC
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gb9nks-MuiTypography-root-MuiLink-root-link"
                        href="https://www.genenames.org/data/gene-symbol-report/#!/hgnc_id/HGNC:1939"
                        rel="noopener"
                        target="_blank"
                      >
                        HGNC:1939
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root css-1w1gqi5-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      UniProtKB Swiss-Prot
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gb9nks-MuiTypography-root-MuiLink-root-link"
                        href="http://www.uniprot.org/uniprot/O00533"
                        rel="noopener"
                        target="_blank"
                      >
                        O00533
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root css-1w1gqi5-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      NCBI
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gb9nks-MuiTypography-root-MuiLink-root-link"
                        href="http://www.ncbi.nlm.nih.gov/gene/10752"
                        rel="noopener"
                        target="_blank"
                      >
                        10752
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root css-1w1gqi5-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      OMIM
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gb9nks-MuiTypography-root-MuiLink-root-link"
                        href="https://www.omim.org/entry/607416"
                        rel="noopener"
                        target="_blank"
                      >
                        607416
                      </a>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GDCTrack widget > renders mutation extra panel 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1808mag-MuiPaper-root-MuiAccordion-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <h3
    class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
  >
    <button
      aria-expanded="true"
      class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters css-5l1z4b-MuiButtonBase-root-MuiAccordionSummary-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-ja37vy-MuiAccordionSummary-content"
      >
        <span
          class="MuiTypography-root MuiTypography-button css-l5w3u1-MuiTypography-root"
        >
          External Links
        </span>
      </span>
      <span
        class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ctmwhn-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </span>
    </button>
  </h3>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
      >
        <div
          class="MuiAccordion-region css-at4ued-MuiAccordion-region"
          role="region"
        >
          <div
            class="MuiAccordionDetails-root css-1mmb7mj-MuiAccordionDetails-root"
          >
            <div
              style="width: 100%; max-height: 600px; overflow: auto;"
            >
              <table
                class="MuiTable-root css-1anakm7-MuiTable-root-table"
              >
                <tbody
                  class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root css-1w1gqi5-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      GDC
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gb9nks-MuiTypography-root-MuiLink-root-link"
                        href="https://portal.gdc.cancer.gov/ssms/0208efeb-f1e8-57e4-8447-299c5f050380"
                        rel="noopener"
                        target="_blank"
                      >
                        0208efeb-f1e8-57e4-8447-299c5f050380
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root css-1w1gqi5-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      Cosmic
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-1dvck71-MuiTableCell-root"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gb9nks-MuiTypography-root-MuiLink-root-link"
                        href="https://cancer.sanger.ac.uk/cosmic/mutation/overview?id=1044638"
                        rel="noopener"
                        target="_blank"
                      >
                        COSM1044638
                      </a>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
